
  * Drop ruby1.8-elisp. The Ruby emacs mode is now provided in emacs 23.
    All the open bugs were mentioned to an upstream developer, who fixed the
    ones that still affected ruby-mode.
    Closes: #502926, #527266, #192647, #282796, #366045, #373199, #411173.
    Closes: #468952, #619754.
  * Add patch 110411_disable_osslv2.patch
    Disables SSLv2. Closes: #621509

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Mon, 11 Apr 2011 14:14:30 +0200

ruby1.8 (1.8.7.334-3) unstable; urgency=low

  * Remove --with-lookup-order-hack=INET. That breaks IPv6-only systems.
    Closes: #619209

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 25 Mar 2011 15:48:05 +0100

ruby1.8 (1.8.7.334-2) unstable; urgency=low

  * Switch to git. Update Vcs-* fields.
  * Upload to unstable.

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 25 Mar 2011 10:07:59 +0100

ruby1.8 (1.8.7.334-2~experimental.1) experimental; urgency=low

  * Switch to dpkg-source 3.0 (quilt) format
  * Add a 'nordoc' option for DEB_BUILD_OPTIONS
  * Switch to alternatives to manage ruby, rdoc, ri, ...
  * Add a ruby1.8-full metapackage.
  * Upload to experimental. Changes are very intrusive and need
    extensive testing.

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sat, 05 Mar 2011 20:43:46 +0100

ruby1.8 (1.8.7.334-1) unstable; urgency=low

  * New upstream release. (Closes: #615279)
    - (CVE-2011-1005; Closes: #615517)
    - (CVE-2011-1004; Closes: #615518)

 -- Daigo Moriwaki <daigo@debian.org>  Sun, 27 Feb 2011 13:12:03 +0900

ruby1.8 (1.8.7.302-2) unstable; urgency=high

  * Add debian/patches/100901_threading_fixes.patch. Fixes threading
    problems on Debian GNU/kFreeBSD exhibited by puppet.
    Thanks to Petr Salinger and Aurélien Jarno. Closes: #595034

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 01 Sep 2010 12:08:48 +0200

ruby1.8 (1.8.7.302-1) unstable; urgency=high

  * New upstream release in the stable 1.8.7 branch (very minor changes only).
    + Fixes CVE-2010-0541.
