@@ -7,6 +7,9 @@ ruby1.8 (1.8.7.334-4) UNRELEASED; urgency=low
     Closes: #468952, #619754.
   * Add patch 110411_disable_osslv2.patch
     Disables SSLv2. Closes: #621509
+  * Move the ri1.8 binary and manpage to the ruby1.8 package. ri1.8 still
+    exists, but only contains the documentation. This is needed to
+    Closes: #621058.
 
  -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Mon, 11 Apr 2011 14:14:30 +0200
 
